Fix responsive spacings and heading font sizes (#182)

--- a/src/theme/blocks/_image.scss
+++ b/src/theme/blocks/_image.scss
@@ -111,8 +111,8 @@ figure {
 
     &.center {
       width: 100% !important;
-      margin-right: auto;
-      margin-left: auto;
+      margin-right: auto !important;
+      margin-left: auto !important;
       object-fit: cover;
 
       img {
